samples/_failures_safe/1761492454_7e9c99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_699215b7.c: In function ‘main’:
./samples/SAFE/__tmp_699215b7.c:161:16: error: missing terminating " character
  161 |         printf("\nCompression/Decompression failed - data
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_699215b7.c:161:9: error: expected expression at end of input
  161 |         printf("\nCompression/Decompression failed - data
      |         ^~~~~~
./samples/SAFE/__tmp_699215b7.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_699215b7.c:161:9: error: expected declaration or statement at end of input
